Tidying up the Sass files so everyone can be all like 'ooh, Rachel's so talented at organizing one-page's wort of CSS\!' (Not everyone, just Sam.)

--- a/book/scss/screen.scss
+++ b/book/scss/screen.scss
@@ -1,329 +1,18 @@
-@import "compass/css3/";
-@import "animation-studio";
+@import "compass/css3/"; // css3 helpers
+@import "animation-studio"; // animation helpers
+
+// Import reset to blow away all styles ever. Don't need them.
 @import "compass/reset";
 
-// Variables
-// Max dimensions of iPad retina, the highest target device: 2048-by-1536
-$max-width : 2048px;
-$max-height: 1536px;
-$min-width: 800px;
-$min-height: 600px;
-$percent-width: $min-width/$max-width;
-$percent-height: $min-height/$max-height;
+// Universally resusable stuff goes here.
+@import "variables";
+@import "extends";
 
-html, body {
-	background: #000;
-	height: 100%
-}
-// Extendables
-%visuallyhidden { // hidden from view, not from screen readers!
-  position: absolute; 
-  overflow: hidden; 
-  clip: rect(0 0 0 0); 
-  height: 1px; width: 1px; 
-  margin: -1px; 
-}
-
-%hidden {
-	display: none !important;
-}
-
-%shown {
-	display: block !important;
-}
-
-%imgreplace {
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-}
-
-//p:not(.caption) { revisit if you want to make a more storybook version
-p {
-	@extend %visuallyhidden;
-}
+// General styles for background + shared styles for universal elements. 
+@import "foundation";
 
 // Loading page
-.loading {
-	@extend %hidden;
-}
-
-.loading, .scene {
-	margin: 0 auto;
-	width: 800px;
-}
+@import "loader";
 
 // Scenes
-// all but the park start hidden. // actually, under loading page, it's hidden too.
-.scene:not(.scene-park) {
-	@extend %hidden;
-}
-
-.scene.cue {
-	@extend %shown;
-}
-
-.scene-park {
-	padding-bottom: 2px;
-}
-
-// Pages
-.page_sitting-in-the-park {
-	@include background(image-url("bg_park1.jpg") no-repeat);
-}
-
-$sleepy-eyes: 'eyes';
-.page_alice-is-bored {
-	@include background(image-url("bg_park2.jpg") no-repeat);
-	.eyes {
-	  // @include animation-sequence($sleepy-eyes, 1s);
-	  width: 124px; height: 57px;
-	  top: 159px; left: 83px;
-	}
-}
-// @include animation-sequence-sprite-generator($sleepy-eyes);
-// @include animation-sequence-keyframes($sleepy-eyes);
-
-.page_rabbit-appears {
-	@include background(image-url("bg_park3.jpg") no-repeat);
-	.blink {
-		@include background(image-url("blink.svg") 0 100% no-repeat); //for animation-deprived viewers, leave eye open.
-		@include background-size(100% auto);
-		position: absolute;
-		width: 100%; height: 100%;
-		z-index: 2;
-	}
-	&.in-view .blink {
-		@include animation(scene-blink .75s steps(5) 5 -1s alternate);			
-	}
-	.rabbit {
-		@extend %imgreplace;
-		@include background(image-url("rabbit_running.png"));
-		width: 444px; height: 490px;
-		position: absolute;
-		top: 60%; margin-top: -245px;
-		left: 50%; margin-left: -244px;
-		z-index: 1;
-		.cssanimations & { 
-			left: -50%;
-		}
-	}
-	&.in-view .rabbit {
-		left: 200%;
-		@include transition(left 5s ease-in);
-	}
-}
-
-//candidate for Animation Studio sans sprite gen as SVG sprite is here already
-@include keyframes(scene-blink) {
-    0% { background-position: 0 0; }
-    100% { background-position: 0 125%; }
-}
-
-.page_rabbit-chase {
-	@include background(image-url("bg_park4.jpg") no-repeat);
-	.alice {
-		@include background(image-url("park4_alice.png"));
-		@include background-size(100% 100%);
-		position: absolute;
-		bottom: 0; left: 34%;
-		.csstransitions & { left: -50%;}
-		width: $percent-width*486px; height: $percent-height*396px;	
-	}
-	.rabbit1 {
-		@include background(image-url("park4_rabbit1.png"));
-		@include background-size(100% 100%);
-		position: absolute;
-		top: 33%; left: 46%;
-		width: $percent-width*171px; height: $percent-height*497px;
-	}
-	.rabbit2 {
-		@include background(image-url("park4_rabbit2.png"));
-		@include background-size(100% 100%);
-		position: absolute;
-		bottom: 0; left: 70%;
-		.csstransitions & { left: -50%;}
-		width: $percent-width*415px; height: $percent-height*381px;
-	}
-	.csstransitions &.in-view {
-		// once in view, the rabbit should run into the distance in frame 2
-		.rabbit1 {
-			@include transition(transform 2s ease-in);
-			@include scale(.5, .5, 0);
-		}
-		// and in frame three they should both runn off page after a small delay for the above to finish
-		.rabbit2 {
-			@include transition(left 3s ease-in 1.5s);
-			left: 100%;
-		}
-		.alice {
-			@include transition(left 3s ease-in 2s);
-			left: 100%;
-		}
-	}
-}
-
-.page_the-hole {
-	@include background(image-url("bg_park5_1.png") no-repeat,
-		radial-gradient(70% 60%, circle closest-side, #eb125d, #000));
-		// rad grad ref: http://www.css3files.com/gradient/
-	.foreground {
-		height: 100%;
-		@include background(image-url("bg_park5_2.png") no-repeat 100% 100%);
-		@include background-size(100% auto);
-	}
-	.rabbit {
-		@include background(image-url("park5_rabbit.png"));
-		@include background-size(100% 100%);
-		position: absolute;
-		top: 15%; left: 60%;
-		width: $percent-width*300px; height: $percent-height*635px;
-		@include opacity(0);
-		z-index: -1;
-		.cssanimations & { @include opacity(1);}
-	}
-	&.in-view {
-		@include animation(hole-glow 2s infinite alternate);
-		.rabbit {
-			@include animation(rabbit-down 3s forwards);
-		}
-	}
-}
-
-@include keyframes(rabbit-down) {
-    100% { top: 100% }
-}
-
-@include keyframes(hole-glow) {
-    0% { background-size: 100% auto, 100% 100%; }
-    100% { background-size: 100% auto, 120% 120%; }
-}
-
-#to-tunnels {
-	@extend %imgreplace;
-	position: absolute;
-	top: 34%; left: 53%;
-	width: 29%; height: 16%;
-}
-
-.page_tunnels {
-	@include background(image-url("../../storyboard/storyboard6.jpg") no-repeat);
-}
-
-.falling_frightened {
-	@include background(image-url("../../storyboard/storyboard7.jpg") no-repeat);
-}
-
-.falling_curious {
-	@include background(image-url("../../storyboard/storyboard8.jpg") no-repeat);
-}
-
-.falling_bored {
-	@include background(image-url("../../storyboard/storyboard9.jpg") no-repeat);
-}
-
-.falling_sleeping {
-	@include background(image-url("../../storyboard/storyboard10.jpg") no-repeat);
-}
-
-.falling_waking {
-	@include background(image-url("../../storyboard/storyboard11.jpg") no-repeat);
-}
-
-.falling_weird {
-	@include background(image-url("../../storyboard/storyboard12.jpg") no-repeat);
-}
-
-.falling_aftermath {
-	@include background(image-url("../../storyboard/storyboard13.jpg") no-repeat);
-}
-
-.falling_lookit-cat {
-	@include background(image-url("../../storyboard/storyboard14.jpg") no-repeat);
-}
-
-.falling_cat-reveal {
-	@include background(image-url("../../storyboard/storyboard15.jpg") no-repeat);
-}
-
-.falling_cat-out {
-	@include background(image-url("../../storyboard/storyboard16.jpg") no-repeat);
-}
-
-.scene-cut {
-	@include background(image-url("../../storyboard/storyboard17.png") no-repeat);
-}
-
-.page_crash-landing {
-	@include background(image-url("../../storyboard/storyboard18.jpg") no-repeat);
-}
-
-.page_credits {
-	@include background(image-url("../../storyboard/storyboard19.jpg") no-repeat);
-}
-
-.page { 
-	@extend %imgreplace;
-	height:600px;
-	position: relative;
-	z-index: 0;
-	@include background-size( 100% auto);
-	@include background-origin( padding-box);
-}
-
-
-// The Tunnel
-
-#tunnel {
-	position: relative;
-}
-
-//let Alice and Cheshire hover above
-.page_falling { z-index: -1;}
-
-// Cut
-.scene-cut { 
-	background: #000;
-	height: 100%;
-	position: fixed;
-	top: 0; left: 50%;
-	margin-left: -400px;
-	@include transition(opacity 2s ease-out 2s);
-	z-index: 10;
-	&.cue {
-		@include animation(fadeOutFromNone 2s forwards);
-	}
-}
-
-@include keyframes(fadeOutFromNone) {
-	// because transitioning from display: none doesn't work. 
-	//http://stackoverflow.com/questions/8449933/animation-css3-display-opacity
-    0% { opacity: 1;}
-    1% { opacity: 1;}
-    100% { opacity: 0; }
-}
-
-
-// Characters
-
-// .alice-falling {
-// 	background: #666;
-// 	width: 200px; height: 200px;
-// 	position: absolute;
-// 	top: 0; left: 50%;
-// 	margin-left: -200px;
-// }
-
-// .cheshire-cat {
-// 	background: red;
-// 	width: 100px; height: 50px;
-// 	position: absolute;
-// 	bottom: 0; right: 50%;
-// 	margin-right: -200px; 
-// }
-
-// #tunnel.in-view {
-// 	.alice-falling, .cheshire-cat {
-// 		position: fixed;
-// 	}
-// }
+@import "scenes/scenes";
