Split sitting park pages into two.

--- a/book/scss/scenes/park/_park.scss
+++ b/book/scss/scenes/park/_park.scss
@@ -1,5 +1,6 @@
 @import "scene-park";
 @import "page-sitting-in-the-park";
+@import "page-alice-is-bored";
 @import "page-rabbit-appears";
 @import "page-rabbit-chase";
 @import "page-the-hole";
