--- a/book/scss/scenes/tunnels/_tunnels.scss
+++ b/book/scss/scenes/tunnels/_tunnels.scss
@@ -1,7 +1,7 @@
 .page.page_tunnels {
 	@include background(image-url("tunnels.svg") no-repeat,
 		image-url("bg_tunnel-specks.png"),
-		#033
+		#5A4F4A
 		);
 	@include background-size(100% auto, auto auto);
 }
@@ -9,50 +9,93 @@
 // The Tunnel
 
 #tunnel {
+	background: #5A4F4A;
 	position: relative;
+}
+
+.tunnel_bg_wrapper {
+	height: 100%; width: 100%;
+	overflow: hidden;
+	top: 0; left: 0;
+}
+
+@include keyframes(fall) {
+  0% { 
+    @include translate(0, 0);
+  }
+  100% {
+    @include translate(0, -900px);
+  }
+}
+
+.tunnel_bg {
+	@include animation(fall 6s linear infinite);
+	@include background(
+		url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-left.svg?1) 0 0 repeat-y,
+		url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-right.svg?1) 100% 0 repeat-y,
+		url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-furniture-comp900.svg) top center repeat-y,
+		url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-specks.png)
+	);
+	background-size: 
+		20px 150px, 
+		20px 150px, 
+		100% 900px,
+		auto auto;
+	position: absolute;
+	left: 50%; top: 0;
+	margin-left: -400px;
+	height: 900px; width: 800px;
+}
+
+.tunnel_bg2 {
+  top: 900px;
+}
+
+.tunnel_bg3 {
+  top: 1800px;
 }
 
 //let Alice and Cheshire hover above
 .page_falling { z-index: -1;}
 
 .falling_frightened {
-	@include background(image-url("../../storyboard/storyboard7.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard7.jpg") no-repeat);
 }
 
 .falling_curious {
-	@include background(image-url("../../storyboard/storyboard8.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard8.jpg") no-repeat);
 }
 
 .falling_bored {
-	@include background(image-url("../../storyboard/storyboard9.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard9.jpg") no-repeat);
 }
 
 .falling_sleeping {
-	@include background(image-url("../../storyboard/storyboard10.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard10.jpg") no-repeat);
 }
 
 .falling_waking {
-	@include background(image-url("../../storyboard/storyboard11.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard11.jpg") no-repeat);
 }
 
 .falling_weird {
-	@include background(image-url("../../storyboard/storyboard12.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard12.jpg") no-repeat);
 }
 
 .falling_aftermath {
-	@include background(image-url("../../storyboard/storyboard13.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard13.jpg") no-repeat);
 }
 
 .falling_lookit-cat {
-	@include background(image-url("../../storyboard/storyboard14.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard14.jpg") no-repeat);
 }
 
 .falling_cat-reveal {
-	@include background(image-url("../../storyboard/storyboard15.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard15.jpg") no-repeat);
 }
 
 .falling_cat-out {
-	@include background(image-url("../../storyboard/storyboard16.jpg") no-repeat);
+	// @include background(image-url("../../storyboard/storyboard16.jpg") no-repeat);
 }
 
 // Characters
@@ -73,8 +116,8 @@
 // 	margin-right: -200px; 
 // }
 
-// #tunnel.in-view {
-// 	.alice-falling, .cheshire-cat {
-// 		position: fixed;
-// 	}
-// }
+#tunnel.in-view {
+	.alice-falling, .cheshire-cat, .tunnel_bg_wrapper {
+		position: fixed;
+	}
+}
