--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -102,7 +102,28 @@ html, body {
   width: 800px;
 }
 
-/* line 13, ../scss/scenes/_common.scss */
+/* line 2, ../scss/scenes/_common.scss */
+#wrapper {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: auto;
+}
+
+/* line 9, ../scss/scenes/_common.scss */
+#scroller {
+  position: absolute;
+  z-index: 1;
+  /*  -webkit-touch-callout:none;*/
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  width: 100%;
+  padding: 0;
+}
+
+/* line 29, ../scss/scenes/_common.scss */
 .scene .page {
   height: 600px;
   position: relative;
