--- a/book/scss/scenes/_common.scss
+++ b/book/scss/scenes/_common.scss
@@ -1,3 +1,19 @@
+// iScroll styles 
+#wrapper {
+    position:absolute; z-index:1;
+    top:0; bottom:0; left:0;
+    width:100%;
+    overflow:auto;
+}
+
+#scroller {
+    position:absolute; z-index:1;
+/*  -webkit-touch-callout:none;*/
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
+    width:100%;
+    padding:0;
+}
+
 // all but the park start hidden. 
 .scene:not(.scene-park) {
 	@extend %hidden;
