Making iscroll work for testing.

--- a/book/scss/scenes/tunnels/_tunnels.scss
+++ b/book/scss/scenes/tunnels/_tunnels.scss
@@ -42,8 +42,7 @@
 		100% 900px,
 		auto auto;
 	position: absolute;
-	left: 50%; top: 0;
-	margin-left: -400px;
+	top: 0;
 	height: 900px; width: 800px;
 }
 
