Undoing the iscroll stuff because it was just too difficult to maintain state without scrollTo and offset and a callback.

--- a/book/scss/scenes/tunnels/_tunnels.scss
+++ b/book/scss/scenes/tunnels/_tunnels.scss
@@ -42,7 +42,8 @@
 		100% 900px,
 		auto auto;
 	position: absolute;
-	top: 0;
+	left: 50%; top: 0;
+	margin-left: -400px;
 	height: 900px; width: 800px;
 }
 
