--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -102,28 +102,7 @@ html, body {
   width: 800px;
 }
 
-/* line 2, ../scss/scenes/_common.scss */
-#wrapper {
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  overflow: auto;
-}
-
-/* line 9, ../scss/scenes/_common.scss */
-#scroller {
-  position: absolute;
-  z-index: 1;
-  /*  -webkit-touch-callout:none;*/
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  width: 100%;
-  padding: 0;
-}
-
-/* line 29, ../scss/scenes/_common.scss */
+/* line 13, ../scss/scenes/_common.scss */
 .scene .page {
   height: 600px;
   position: relative;
@@ -635,27 +614,29 @@ html, body {
   background: url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-left.svg?1) 0 0 repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-right.svg?1) 100% 0 repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-furniture-comp900.svg) top center repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-specks.png);
   background-size: 20px 150px,  20px 150px,  100% 900px, auto auto;
   position: absolute;
+  left: 50%;
   top: 0;
+  margin-left: -400px;
   height: 900px;
   width: 800px;
 }
 
-/* line 49, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 50, ../scss/scenes/tunnels/_tunnels.scss */
 .tunnel_bg2 {
   top: 900px;
 }
 
-/* line 53, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 54, ../scss/scenes/tunnels/_tunnels.scss */
 .tunnel_bg3 {
   top: 1800px;
 }
 
-/* line 58, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 59, ../scss/scenes/tunnels/_tunnels.scss */
 .page_falling {
   z-index: -1;
 }
 
-/* line 119, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 120, ../scss/scenes/tunnels/_tunnels.scss */
 #tunnel.in-view .alice-falling, #tunnel.in-view .cheshire-cat, #tunnel.in-view .tunnel_bg_wrapper {
   position: fixed;
 }
