All pages and their contents are sized proportionally.

--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -96,15 +96,9 @@ html, body {
   height: 100%;
 }
 
-/* line 5, ../scss/_loader.scss */
-.loading, .scene {
-  margin: 0 auto;
-  width: 800px;
-}
-
 /* line 13, ../scss/scenes/_common.scss */
 .scene .page {
-  height: 600px;
+  padding-top: 75%;
   position: relative;
   z-index: 0;
   -webkit-background-size: 100% auto;
@@ -197,14 +191,15 @@ html, body {
   position: absolute;
   top: 24%;
   left: 10%;
-  width: 124px;
-  height: 57px;
+  width: 15.5%;
+  height: 0;
+  padding-top: 7.125%;
   -webkit-background-size: 100% auto;
   -moz-background-size: 100% auto;
   -o-background-size: 100% auto;
   background-size: 100% auto;
 }
-/* line 16, ../scss/scenes/park/_page-alice-is-bored.scss */
+/* line 17, ../scss/scenes/park/_page-alice-is-bored.scss */
 .page_alice-is-bored.in-view .eyes {
   -webkit-animation-play-state: running;
   -moz-animation-play-state: running;
@@ -224,18 +219,19 @@ html, body {
   -o-background-size: 100% auto;
   background-size: 100% auto;
   position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
   z-index: 2;
 }
-/* line 10, ../scss/scenes/park/_page-rabbit-appears.scss */
+/* line 11, ../scss/scenes/park/_page-rabbit-appears.scss */
 .page_rabbit-appears.in-view .blink {
   -webkit-animation: scene-blink 0.75s steps(5) 5 -1s alternate;
   -moz-animation: scene-blink 0.75s steps(5) 5 -1s alternate;
   -o-animation: scene-blink 0.75s steps(5) 5 -1s alternate;
   animation: scene-blink 0.75s steps(5) 5 -1s alternate;
 }
-/* line 13, ../scss/scenes/park/_page-rabbit-appears.scss */
+/* line 14, ../scss/scenes/park/_page-rabbit-appears.scss */
 .page_rabbit-appears .rabbit {
   background: url('../img/rabbit_running.png?1377546276');
   width: 444px;
@@ -247,11 +243,11 @@ html, body {
   margin-left: -244px;
   z-index: 1;
 }
-/* line 21, ../scss/scenes/park/_page-rabbit-appears.scss */
+/* line 22, ../scss/scenes/park/_page-rabbit-appears.scss */
 .cssanimations .page_rabbit-appears .rabbit {
   left: -50%;
 }
-/* line 25, ../scss/scenes/park/_page-rabbit-appears.scss */
+/* line 26, ../scss/scenes/park/_page-rabbit-appears.scss */
 .page_rabbit-appears.in-view .rabbit {
   left: 200%;
   -webkit-transition: left 5s ease-in;
@@ -261,48 +257,48 @@ html, body {
 }
 
 @-moz-keyframes scene-blink {
-  /* line 33, ../scss/scenes/park/_page-rabbit-appears.scss */
+  /* line 34, ../scss/scenes/park/_page-rabbit-appears.scss */
   0% {
     background-position: 0 0;
   }
 
-  /* line 34, ../scss/scenes/park/_page-rabbit-appears.scss */
+  /* line 35, ../scss/scenes/park/_page-rabbit-appears.scss */
   100% {
     background-position: 0 125%;
   }
 }
 
 @-webkit-keyframes scene-blink {
-  /* line 33, ../scss/scenes/park/_page-rabbit-appears.scss */
+  /* line 34, ../scss/scenes/park/_page-rabbit-appears.scss */
   0% {
     background-position: 0 0;
   }
 
-  /* line 34, ../scss/scenes/park/_page-rabbit-appears.scss */
+  /* line 35, ../scss/scenes/park/_page-rabbit-appears.scss */
   100% {
     background-position: 0 125%;
   }
 }
 
 @-o-keyframes scene-blink {
-  /* line 33, ../scss/scenes/park/_page-rabbit-appears.scss */
+  /* line 34, ../scss/scenes/park/_page-rabbit-appears.scss */
   0% {
     background-position: 0 0;
   }
 
-  /* line 34, ../scss/scenes/park/_page-rabbit-appears.scss */
+  /* line 35, ../scss/scenes/park/_page-rabbit-appears.scss */
   100% {
     background-position: 0 125%;
   }
 }
 
 @keyframes scene-blink {
-  /* line 33, ../scss/scenes/park/_page-rabbit-appears.scss */
+  /* line 34, ../scss/scenes/park/_page-rabbit-appears.scss */
   0% {
     background-position: 0 0;
   }
 
-  /* line 34, ../scss/scenes/park/_page-rabbit-appears.scss */
+  /* line 35, ../scss/scenes/park/_page-rabbit-appears.scss */
   100% {
     background-position: 0 125%;
   }
@@ -322,8 +318,8 @@ html, body {
   position: absolute;
   bottom: 0;
   left: 34%;
-  width: 189.84375px;
-  height: 154.6875px;
+  width: 23.73047%;
+  padding-top: 19.33594%;
 }
 /* line 8, ../scss/scenes/park/_page-rabbit-chase.scss */
 .csstransitions .page_rabbit-chase .alice {
@@ -339,8 +335,8 @@ html, body {
   position: absolute;
   top: 33%;
   left: 46%;
-  width: 66.79688px;
-  height: 194.14063px;
+  width: 8.34961%;
+  padding-top: 24.26758%;
 }
 /* line 18, ../scss/scenes/park/_page-rabbit-chase.scss */
 .page_rabbit-chase .rabbit2 {
@@ -352,8 +348,8 @@ html, body {
   position: absolute;
   bottom: 0;
   left: 70%;
-  width: 162.10938px;
-  height: 148.82813px;
+  width: 20.26367%;
+  padding-top: 18.60352%;
 }
 /* line 23, ../scss/scenes/park/_page-rabbit-chase.scss */
 .csstransitions .page_rabbit-chase .rabbit2 {
@@ -405,8 +401,11 @@ html, body {
   -moz-background-size: 100% auto;
   -o-background-size: 100% auto;
   background-size: 100% auto;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
-/* line 10, ../scss/scenes/park/_page-the-hole.scss */
+/* line 13, ../scss/scenes/park/_page-the-hole.scss */
 .page_the-hole .rabbit {
   background: url('../img/park5_rabbit.png?1377535949');
   -webkit-background-size: 100% 100%;
@@ -416,25 +415,25 @@ html, body {
   position: absolute;
   top: 15%;
   left: 60%;
-  width: 117.1875px;
-  height: 248.04688px;
+  width: 14.64844%;
+  padding-top: 31.00586%;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   z-index: -1;
 }
-/* line 18, ../scss/scenes/park/_page-the-hole.scss */
+/* line 21, ../scss/scenes/park/_page-the-hole.scss */
 .cssanimations .page_the-hole .rabbit {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 20, ../scss/scenes/park/_page-the-hole.scss */
+/* line 23, ../scss/scenes/park/_page-the-hole.scss */
 .page_the-hole.in-view {
   -webkit-animation: hole-glow 2s infinite alternate;
   -moz-animation: hole-glow 2s infinite alternate;
   -o-animation: hole-glow 2s infinite alternate;
   animation: hole-glow 2s infinite alternate;
 }
-/* line 22, ../scss/scenes/park/_page-the-hole.scss */
+/* line 25, ../scss/scenes/park/_page-the-hole.scss */
 .page_the-hole.in-view .rabbit {
   -webkit-animation: rabbit-down 3s forwards;
   -moz-animation: rabbit-down 3s forwards;
@@ -443,82 +442,82 @@ html, body {
 }
 
 @-moz-keyframes rabbit-down {
-  /* line 29, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 32, ../scss/scenes/park/_page-the-hole.scss */
   100% {
     top: 100%;
   }
 }
 
 @-webkit-keyframes rabbit-down {
-  /* line 29, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 32, ../scss/scenes/park/_page-the-hole.scss */
   100% {
     top: 100%;
   }
 }
 
 @-o-keyframes rabbit-down {
-  /* line 29, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 32, ../scss/scenes/park/_page-the-hole.scss */
   100% {
     top: 100%;
   }
 }
 
 @keyframes rabbit-down {
-  /* line 29, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 32, ../scss/scenes/park/_page-the-hole.scss */
   100% {
     top: 100%;
   }
 }
 
 @-moz-keyframes hole-glow {
-  /* line 33, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 36, ../scss/scenes/park/_page-the-hole.scss */
   0% {
     background-size: 100% auto, 100% 100%;
   }
 
-  /* line 34, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 37, ../scss/scenes/park/_page-the-hole.scss */
   100% {
     background-size: 100% auto, 120% 120%;
   }
 }
 
 @-webkit-keyframes hole-glow {
-  /* line 33, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 36, ../scss/scenes/park/_page-the-hole.scss */
   0% {
     background-size: 100% auto, 100% 100%;
   }
 
-  /* line 34, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 37, ../scss/scenes/park/_page-the-hole.scss */
   100% {
     background-size: 100% auto, 120% 120%;
   }
 }
 
 @-o-keyframes hole-glow {
-  /* line 33, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 36, ../scss/scenes/park/_page-the-hole.scss */
   0% {
     background-size: 100% auto, 100% 100%;
   }
 
-  /* line 34, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 37, ../scss/scenes/park/_page-the-hole.scss */
   100% {
     background-size: 100% auto, 120% 120%;
   }
 }
 
 @keyframes hole-glow {
-  /* line 33, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 36, ../scss/scenes/park/_page-the-hole.scss */
   0% {
     background-size: 100% auto, 100% 100%;
   }
 
-  /* line 34, ../scss/scenes/park/_page-the-hole.scss */
+  /* line 37, ../scss/scenes/park/_page-the-hole.scss */
   100% {
     background-size: 100% auto, 120% 120%;
   }
 }
 
-/* line 37, ../scss/scenes/park/_page-the-hole.scss */
+/* line 40, ../scss/scenes/park/_page-the-hole.scss */
 #to-tunnels {
   position: absolute;
   top: 34%;
