--- a/book/scss/scenes/park/_page-the-hole.scss
+++ b/book/scss/scenes/park/_page-the-hole.scss
@@ -6,13 +6,16 @@
 		height: 100%;
 		@include background(image-url("bg_park5_2.png") no-repeat 100% 100%);
 		@include background-size(100% auto);
+		position: absolute;
+		bottom: 0;
+		width: 100%
 	}
 	.rabbit {
 		@include background(image-url("park5_rabbit.png"));
 		@include background-size(100% 100%);
 		position: absolute;
 		top: 15%; left: 60%;
-		width: $percent-width*300px; height: $percent-height*635px;
+		width: percentage(300/$max-width); padding-top: percentage(635/$max-width);
 		@include opacity(0);
 		z-index: -1;
 		.cssanimations & { @include opacity(1);}
